# blockchain

solana/metadata/jaybhatt-pic/: jay-metadata.json  metadata.json
solana/solana-project/nft-mint/: package.json
solana/solana-project/nft-mint/scripts/: cicd.sh
solana/solana-project/nft-mint/src/cliient/: app.ts
solana/solana-project/nft-mint/src/nft_smart_contracts/: Cargo.toml
solana/solana-project/nft-mint/src/nft_smart_contracts/src/: lib.rs
solana/solana-project/todo-task/: package-lock.json  package.json  tsconfig.json
solana/solana-project/todo-task/scripts/: cicd.sh
solana/solana-project/todo-task/src/client/: connection.js  connection.ts  index.html  main.js  main.ts  server.js  server.ts  todo.js  todo.ts  todoStorage.js  todoStorage.ts  util.js  util.ts
solana/solana-project/todo-task/src/todo_smart_contracts/: Cargo.toml
solana/solana-project/todo-task/src/todo_smart_contracts/src/: lib.rs
solana/solana-setup/: Dockerfile  docker-compose.yml
