[package]
name = "nft_smart_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
#borsh = "1.5.7"
#borsh-derive = "1.5.7"
solana-program = "2.2.1"
spl-token = { version="8.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="7.0.0", features = [ "no-entrypoint" ] }


[dev-dependencies]
solana-program-test = "2.2.3"
solana-sdk = "2.2.2"

[lib]
crate-type = ["cdylib", "lib"]